--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -1,3 +1,32 @@
 .hero
   background-image: url('../img/hero.jpg')
   background-position: center
+
+
+.hero-text h2
+  font-family: freight
+
+.hero-text h2 span
+  font-family: fjalla
+
+.hero-button button
+  font-family: fjalla
+  letter-spacing: 2px
+  font-size: 14px
+
+.collage-navbar
+  background: #373737
+  font-family: opensans
+
+.collage-navbar li a
+  color: #bdbdb7
+  &:hover
+    color: #fff
+
+#home a
+  color: #fff
+  &:hover
+    color: #dc7725
+
+#dropdown-collage
+  color: #dc7725
