--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,20 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: freight;
+  src: url("../fonts/freightBig.otf");
+}
+@font-face {
+  font-family: fjalla;
+  src: url("../fonts/fjalla.woff2");
+}
+@font-face {
+  font-family: opensans;
+  src: url("../fonts/opensans.woff2");
+}
 .hero {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -36,8 +48,9 @@
 }
 
 .hero-text h2 span {
-  font-size: 25px;
-  line-height: 5px;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 6px;
 }
 
 .play img {
@@ -78,6 +91,120 @@ button {
   background-color: #dc7725;
 }
 
+.collage {
+  width: 100%;
+}
+
+.gallery-container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.gallery:nth-of-type(1) {
+  flex-basis: 50%;
+  height: 420px;
+  background: url("../img/home-raft.jpg") center no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.gallery:nth-of-type(2) {
+  flex-basis: 25%;
+  height: 420px;
+  background: url("../img/home-basecamp.jpg") center no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.gallery:nth-of-type(3) {
+  flex-basis: 25%;
+  height: 420px;
+  background: url("../img/home-backpacking.jpg") center no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.gallery:nth-of-type(4) {
+  flex-basis: 25%;
+  height: 420px;
+  background: url("../img/home-canoe.jpg") center no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.gallery:nth-of-type(5) {
+  flex-basis: 25%;
+  height: 420px;
+  background: url("../img/home-photo.jpg") center no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.gallery:nth-of-type(6) {
+  flex-basis: 50%;
+  height: 420px;
+  background: url("../img/home-custom.jpg") center no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.trip-text {
+  padding: 30px;
+  font-family: fjalla;
+  font-size: 16px;
+  color: #fff;
+  position: absolute;
+  align-self: flex-start;
+  margin-top: 150px;
+}
+
+.trip-sep {
+  background: #dc7725;
+  height: 5px;
+  width: 40px;
+  margin-bottom: 15px;
+}
+
+.icon {
+  background: rgba(40, 40, 40, 0.8);
+  border-radius: 100%;
+  padding: 25px;
+  transition: transform 3s, opacity 0.3s;
+}
+
+.gallery:hover .icon {
+  transform: scale(4) rotateX(3423deg);
+}
+
+.icon img {
+  width: 50px;
+}
+
 .navbar {
   display: flex;
   justify-content: space-around;
@@ -91,26 +218,33 @@ button {
   color: #dc7725;
 }
 
-ul {
+.navbar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
 
-li {
+.navbar li {
   float: left;
+  letter-spacing: 2px;
+}
+
+.navbar a {
+  font-family: fjalla;
+  line-height: 50px;
+  font-size: 15px;
 }
 
 li a, .dropbtn {
   display: inline-block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 0 16px;
   text-decoration: none;
 }
 
-li a:hover, .dropdown:hover .dropbtn {
+li .dropdown:hover, .dropdown:hover .dropbtn {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   background: #404040 url("../img/btn-navarrow.png");
@@ -153,9 +287,81 @@ li a:hover, .dropdown:hover .dropbtn {
   display: block;
 }
 
+.collage-navbar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 80px;
+}
+
+.collage-navbar li {
+  display: inline-block;
+  line-height: 40px;
+}
+
+#dropdown-collage {
+  border-left: 1px solid #5d5d5a;
+  margin-left: 15px;
+  padding-left: 15px;
+}
+#dropdown-collage > a {
+  color: #dc7725;
+}
+
+.search {
+  background: url("../img/btn-search.png") top right no-repeat;
+  padding-right: 30px;
+  padding-top: 10px;
+}
+
+.search a {
+  color: #BDBDB7;
+  text-decoration: none;
+}
+.search a:hover {
+  color: #fff;
+}
+
 .hero {
   background-image: url("../img/hero.jpg");
   background-position: center;
+}
+
+.hero-text h2 {
+  font-family: freight;
+}
+
+.hero-text h2 span {
+  font-family: fjalla;
+}
+
+.hero-button button {
+  font-family: fjalla;
+  letter-spacing: 2px;
+  font-size: 14px;
+}
+
+.collage-navbar {
+  background: #373737;
+  font-family: opensans;
+}
+
+.collage-navbar li a {
+  color: #bdbdb7;
+}
+.collage-navbar li a:hover {
+  color: #fff;
+}
+
+#home a {
+  color: #fff;
+}
+#home a:hover {
+  color: #dc7725;
+}
+
+#dropdown-collage {
+  color: #dc7725;
 }
 
 /*# sourceMappingURL=main.css.map */
