--- a/sass/layout/_hero.sass
+++ b/sass/layout/_hero.sass
@@ -1,5 +1,5 @@
 .hero
-  width: 100vw
+  width: 100%
   height: 100vh
   background-repeat: no-repeat
   background-size: cover
@@ -28,8 +28,9 @@
   margin-top: -70px
 
 .hero-text h2 span
-  font-size: 25px
-  line-height: 5px
+  font-size: 20px
+  line-height: 30px
+  letter-spacing: 6px
 
 .play img
   width: 40px
